--- a/ui/app/views/main.html
+++ b/ui/app/views/main.html
@@ -1,37 +1,8 @@
-<div class="header">
-  <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#">About</a></li>
-    <li><a ng-href="#">Contact</a></li>
-  </ul>
-  <h3 class="text-muted">ui</h3>
+<div class="map-container">
+  <leaflet tiles="tiles" center="center" geojson="geojson"></leaflet>
 </div>
-<span ng-bind="stateFocus">None</span>
-<leaflet tiles="tiles" geojson="geojson"></leaflet>
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
-
-<div class="footer">
-  <p>♥ from the Yeoman team</p>
+<div class="marketing">
+  <h1>Join the New World Order.</h1>
+  <h4>Lorem ipsum dolor sit amet, consectetur adipiscing Illuminati. Ut a metus mauris.</h4>
+  <button type="button" class="btn-tour">Learn more</button>
 </div>
