Authentication, many UI improvements, user registration in progress.

--- a/ui/app/views/main.html
+++ b/ui/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="map-container">
+<div class="map-container" ng-controller="BigMapCtrl">
   <leaflet tiles="tiles" center="center" geojson="geojson"></leaflet>
 </div>
 <div class="marketing">
