--- a/ui/app/views/create-account.html
+++ b/ui/app/views/create-account.html
@@ -1,47 +1,75 @@
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
-		<form class="form-horizontal" role="form" ng-submit="submit(user)">
+		<form name="registration" class="form-horizontal" role="form" ng-submit="submit(user)">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					Enter the New World.
+					Identify yourself.
 				</div>
 				<div class="panel-body">
 					<div ng-controller="NotificationsCtrl">
 						<alert ng-repeat="notification in notifications" type="notification.type" close="closeNotification($index)">{{notification.message}}</alert>
 					</div>
 					<!-- e-mail -->
-					<div class="form-group">
-						<label for="inputEmail3" class="col-sm-4 control-label">Email</label>
+					<div class="form-group" ng-class="{'has-error': registration.email.$dirty && registration.email.$invalid && !registration.email.$isEmailAvailable}">
+						<label for="input-email" class="col-sm-4 control-label">Email</label>
 						<div class="col-sm-8">
 							<div class="input-group">
-								<input type="email" class="form-control" ng-model="user.email" placeholder="Enter your email.">
+								<input
+									type="email"
+									name="email"
+									id="input-email"
+									class="form-control"
+									ng-model="user.email"
+									placeholder="Enter your email."
+									ng-is-email-available
+									required>
 							</div>
 						</div>
 					</div>
 					<!-- nickname -->
-					<div class="form-group">
-						<label for="inputPassword3" class="col-sm-4 control-label">Nickname</label>
+					<div class="form-group" ng-class="{'has-error': user.nickname.$invalid}">
+						<label for="input-nickname" class="col-sm-4 control-label">Nickname</label>
 						<div class="col-sm-8">
 							<div class="input-group">
-								<input type="text" class="form-control" ng-model="user.password" placeholder="Enter your Nickname.">
+								<input
+									type="text"
+									id="input-nickname"
+									class="form-control"
+									ng-model="user.nickname"
+									ng-minlength=5
+									ng-maxlength=30
+								   	placeholder="Enter your Nickname."
+									required>
 							</div>
 						</div>
 					</div>
 					<!-- password -->
-					<div class="form-group">
-						<label for="inputPassword3" class="col-sm-4 control-label">Password</label>
+					<div class="form-group" ng-class="{'has-error': user.password.$invalid}">
+						<label for="input-password" class="col-sm-4 control-label">Password</label>
 						<div class="col-sm-8">
 							<div class="input-group">
-								<input type="password" class="form-control" ng-model="user.password" placeholder="Enter your password.">
+								<input
+									type="password"
+									id="input-password"
+									class="form-control"
+									ng-model="user.password"
+									placeholder="Enter your password."
+									required>
 							</div>
 						</div>
 					</div>
 					<!-- password confirmation -->
-					<div class="form-group">
-						<label for="inputPassword3" class="col-sm-4 control-label">Confirm password</label>
+					<div class="form-group" ng-class="{'has-error': user.passwordConfirmation.$invalid}">
+						<label for="input-password-confirmation" class="col-sm-4 control-label">Confirm password</label>
 						<div class="col-sm-8">
 							<div class="input-group">
-								<input type="password" class="form-control" ng-model="user.password" placeholder="Re-enter your password.">
+								<input
+									type="password"
+									id="input-password-confirmation"
+									class="form-control"
+									ng-model="user.passwordConfirmation"
+									placeholder="Re-enter your password."
+									required>
 							</div>
 						</div>
 					</div>
@@ -56,14 +84,36 @@
 					<div class="map-container">
 						<leaflet tiles="tiles" center="center" geojson="geojson"></leaflet>
 					</div>
-					{{ sectorFocus.id }}
+				</div>
+				<div class="panel-footer" ng-if="user.sectorFocus">
+					{{ user.sectorFocus.name }} ({{ user.sectorFocus.state.name}})
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					Join the New World.
+				</div>
+				<div class="panel-body">	
+					<div class="form-group">
+						<label for="input-captcha" class="col-sm-4 control-label">Prove you are human</label>
+						<div class="col-sm-8">
+							<div class="input-group">
+								<div vc-recaptcha
+									id="input-captcha"
+									ng-model="user.captcha"
+									key="{{ recaptcha_public_key }}"
+									theme="clean"></div>
+							</div>
+						</div>
+					</div>
 					<div class="form-group">
 						<div class="col-sm-offset-4 col-sm-8">
-							<button type="submit" class="btn btn-default">Sign in</button>
+							<button type="submit" class="btn btn-primary">Create account</button>
 						</div>
 					</div>
 				</div>
 			</div>
+
 		</form>
 	</div>
 </div>
